[package]
name = "ssi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6.0"
clap = { version = "4.5.16", features = ["derive"] }
serialport = "4.5.0"
tokio = { version = "1.37.0", features = ["full"] }
